# paprika

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose-agent.cpu.yml  docker-compose-agent.yml  docker-compose-worker.yml  docker-compose.reconciler.yml  docker-compose.yml  fetch_html.py  pyproject.toml  requirements.txt
agent_service/: Dockerfile  README.md  main.py  prompt.py  schema.py
client/python/: README.md  pyproject.toml
client/python/examples/: capacity_fetch.py
client/python/paprika_client/: __init__.py  __main__.py  _actions.py  _chrome_decrypt.py  _chrome_local.py  _cli.py  _client.py  _oneshot.py  _page.py  _sync.py  _walker.py
core/: __init__.py  dom_summarizer.py  fetcher.py  host_knowledge.py  perception.py  ssrf_guard.py  url_blacklist.py
deploy/: nginx.conf  paprika-deploy-watcher.service
docs/: 404.html  README.md  _config.yml  admin.html  api.html  architecture-hub.md  architecture-worker.md  architecture.md  auth.md  bridge-extension.md  changelog.md  cli.md  dispatch.md  engine-setup.html  examples.html  faq.md  flow-ai-review.html  flow-asset.html  flow-codegen.html  flow-job.html  flow-multihub.html  flow-session.html  flow-worker.html  flowcharts.html  guides.html  host-recipe.md  http-api.md  index.html  intro.html  locator.md  operations.html  profile.md  quickstart.md  robots.txt  scaling.html  search.html  search.json  sitemap.xml  style.css  usecases.md  (+5 more)
scripts/: README.md  _minio_reclaim.py  _reclaim_driver.sh  _reclaim_fs.sh  _reclaim_fs16.sh  _reclaim_fs16b.sh  deploy.sh  (+16 more)
(+213 files in other folders)
